# designpattern

./: .gitignore  readme.md
bridge/: CMakeLists.txt  Foo.h  Person.cpp  Person.hpp  main.cpp  pimpl.cpp  pimpl.h
builder/: CMakeLists.txt  CreationalGroovyStyle.cpp  compile_commands.json
builder/.cache/clangd/index/: CreationalGroovyStyle.cpp.93B75B9993AE8264.idx
builder_facet/: CMakeLists.txt  Facets.cpp  Person.cpp  Person.h  PersonAddressBuilder.h  PersonBuilder.cpp  PersonBuilder.h  PersonJobBuilder.h  compile_commands.json
builder_facet/.cache/clangd/index/: Facets.cpp.9EBF65A79A97B400.idx  Person.h.CF434125071E5C51.idx
builder_facet_build/: Makefile  cmake_install.cmake  compile_commands.json
dependency_inversion/: CMakeLists.txt  compile_commands.json  main.cpp
factory/abstract_factory/: CMakeLists.txt  CoffeeFactory.h  Doxyfile  DrinkFactory.h  HotDrink.h  HotDrinkFactory.h  TeaFactory.h  compile_commands.json  main.cpp
factory/simple_factory/: CMakeLists.txt  main.cpp
liskov_substitution/: compile_commands.json  main.cpp
memento/: compile_commands.json  main  main.cpp
observer/: CMakeLists.txt  Observable.hpp  Observer.hpp  SafeObservable.hpp  compile_commands.json  main.cpp
open_closed/: compile_commands.json  main.cpp
prototype/: CMakeLists.txt  exercise.cpp  prototype.cpp
single_responsibility/: CMakeLists.txt  compile_commands.json  single_responsibility.cpp
state/boost/: CMakeLists.txt  main  main.cpp
state/classic/: main  main.cpp
state/handmade/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp  (+1 more)
(+9 files in other folders)
