cmake_minimum_required(VERSION 3.10)
find_package(Boost)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES("./")
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)
project(DesignPattern)
add_library(PersonBuilder PersonBuilder.cpp)
add_library(Person Person.cpp)
add_library(Facets Facets.cpp)
add_executable(DesignPattern Facets.cpp)
target_link_libraries(DesignPattern PersonBuilder)
target_link_libraries(DesignPattern Person)
target_link_libraries(DesignPattern Facets)
